uxa: Add Apple's gmux to the list of known preferred backlights

Reported-by: Austin Lund <austin.lund@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=52423
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>